next bro gambar kita kan masih banya kayng dummy dari unsplash, dan stor

--- a/src/lib/i18n/stories.json
+++ b/src/lib/i18n/stories.json
@@ -6,7 +6,7 @@
       "location": { "name": "Simeulue", "lat": 2.61, "lng": 96.08 },
       "aiThemes": ["Local Wisdom", "Disaster Preparedness"],
       "media": {
-        "featuredImage": "https://images.unsplash.com/photo-1616141893496-fbc65370493e?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w3NDE5ODJ8MHwxfHNlYXJjaHwxfHx3YXZlfGVufDB8fHx8MTc1OTUxNjQ3Mnww&ixlib=rb-4.1.0&q=80&w=1080",
+        "featuredImage": "https://cdn.dribbble.com/userupload/26382361/file/original-a94049296846fa5218859ac34ea57b23.png",
         "featuredImageHint": "ocean waves"
       },
       "status": "published"
@@ -17,7 +17,7 @@
       "location": { "name": "Aceh Jaya", "lat": 4.78, "lng": 95.73 },
       "aiThemes": ["Disaster Preparedness", "Peacebuilding"],
       "media": {
-        "featuredImage": "https://images.unsplash.com/photo-1556768555-ee22fbdc8a61?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w3NDE5ODJ8MHwxfHNlYXJjaHw4fHxtYW5ncm92ZSUyMGZvcmVzdHxlbnwwfHx8fDE3NTk0OTM3NDN8MA&ixlib=rb-4.1.0&q=80&w=1080",
+        "featuredImage": "https://cdn.dribbble.com/userupload/27796411/file/original-992aa78e02707e86da76830a224a2f2d.png",
         "featuredImageHint": "mangrove forest"
       },
       "status": "published"
@@ -28,7 +28,7 @@
       "location": { "name": "Bireuen", "lat": 5.2, "lng": 96.7 },
       "aiThemes": ["Peacebuilding", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://images.unsplash.com/photo-1640296150617-1ede154483d9?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w3NDE5ODJ8MHwxfHNlYXJjaHw1fHxkaXNhc3RlcnxlbnwwfHx8fDE3NTk0OTkwOTd8MA&ixlib=rb-4.1.0&q=80&w=1080",
+        "featuredImage": "https://cdn.dribbble.com/userupload/32247153/file/original-1fe677ceff3cabb6bf2037dc808ace4d.jpg",
         "featuredImageHint": "disaster"
       },
       "status": "published"
@@ -39,7 +39,7 @@
       "location": { "name": "Gayo Lues", "lat": 3.98, "lng": 97.35 },
       "aiThemes": ["Disaster Preparedness", "Local Wisdom", "Peacebuilding"],
       "media": {
-        "featuredImage": "https://images.unsplash.com/photo-1582213782179-e0d53f98f2ca?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w3NDE5ODJ8MHwxfHNlYXJjaHwxfHxjb21tdW5pdHl8ZW58MHx8fHwxNzU5NDk5MTEyfDA&ixlib=rb-4.1.0&q=80&w=1080",
+        "featuredImage": "https://cdn.dribbble.com/userupload/16865134/file/original-ac6d283eaa706824abed43da7e901dd2.jpeg",
         "featuredImageHint": "community"
       },
       "status": "published"
@@ -50,7 +50,7 @@
       "location": { "name": "Pidie", "lat": 5.37, "lng": 95.96 },
       "aiThemes": ["Disaster Preparedness", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://images.unsplash.com/photo-1646692071626-7e374cfadaa2?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w3NDE5ODJ8MHwxfHNlYXJjaHwxfHxyYWdpbmclMjByaXZlcnxlbnwwfHx8fDE3NTk0OTM3NDR8MA&ixlib=rb-4.1.0&q=80&w=1080",
+        "featuredImage": "https://cdn.dribbble.com/userupload/29829998/file/original-94b1514fe3d528f62a84cf250c5efc1f.png",
         "featuredImageHint": "raging river"
       },
       "status": "published"
@@ -61,7 +61,7 @@
       "location": { "name": "Aceh Tengah", "lat": 4.62, "lng": 96.85 },
       "aiThemes": ["Disaster Preparedness", "Peacebuilding"],
       "media": {
-        "featuredImage": "https://images.unsplash.com/photo-1613858636109-354616495373?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w3NDE5ODJ8MHwxfHNlYXJjaHwxMHx8Zm9yZXN0JTIwZmlyZXxlbnwwfHx8fDE3NTk0OTM3NDN8MA&ixlib=rb-4.1.0&q=80&w=1080",
+        "featuredImage": "https://cdn.dribbble.com/userupload/16865134/file/original-ac6d283eaa706824abed43da7e901dd2.jpeg",
         "featuredImageHint": "forest fire"
       },
       "status": "published"
@@ -72,7 +72,7 @@
       "location": { "name": "Bener Meriah", "lat": 4.72, "lng": 96.86 },
       "aiThemes": ["Peacebuilding", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://picsum.photos/seed/8/800/600",
+        "featuredImage": "https://cdn.dribbble.com/userupload/16865134/file/original-ac6d283eaa706824abed43da7e901dd2.jpeg",
         "featuredImageHint": "coffee beans"
       },
       "status": "published"
@@ -83,7 +83,7 @@
       "location": { "name": "Pidie", "lat": 5.37, "lng": 95.96 },
       "aiThemes": ["Peacebuilding", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://picsum.photos/seed/9/800/600",
+        "featuredImage": "https://cdn.dribbble.com/userupload/32247153/file/original-1fe677ceff3cabb6bf2037dc808ace4d.jpg",
         "featuredImageHint": "traditional dance"
       },
       "status": "published"
@@ -94,7 +94,7 @@
       "location": { "name": "Aceh Besar", "lat": 5.37, "lng": 95.52 },
       "aiThemes": ["Peacebuilding", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://picsum.photos/seed/10/800/600",
+        "featuredImage": "https://cdn.dribbble.com/userupload/32707329/file/original-01992760209b192c3d12d849dc7ee6d4.jpeg",
         "featuredImageHint": "woven crafts"
       },
       "status": "published"
@@ -105,7 +105,7 @@
       "location": { "name": "Banda Aceh", "lat": 5.55, "lng": 95.32 },
       "aiThemes": ["Local Wisdom", "Disaster Preparedness"],
       "media": {
-        "featuredImage": "https://picsum.photos/seed/11/800/600",
+        "featuredImage": "https://cdn.dribbble.com/userupload/29829998/file/original-94b1514fe3d528f62a84cf250c5efc1f.png",
         "featuredImageHint": "traditional house"
       },
       "status": "published"
@@ -116,7 +116,7 @@
       "location": { "name": "Banda Aceh", "lat": 5.55, "lng": 95.32 },
       "aiThemes": ["Peacebuilding"],
       "media": {
-        "featuredImage": "https://picsum.photos/seed/12/800/600",
+        "featuredImage": "https://cdn.dribbble.com/userupload/16865092/file/original-286765ae0de4074597bfb6584a571c60.jpeg",
         "featuredImageHint": "street art mural"
       },
       "status": "published"
@@ -127,7 +127,7 @@
       "location": { "name": "Banda Aceh", "lat": 5.55, "lng": 95.32 },
       "aiThemes": ["Local Wisdom"],
       "media": {
-        "featuredImage": "https://picsum.photos/seed/13/800/600",
+        "featuredImage": "https://cdn.dribbble.com/userupload/26382361/file/original-a94049296846fa5218859ac34ea57b23.png",
         "featuredImageHint": "fishing boats"
       },
       "status": "published"
@@ -138,7 +138,7 @@
       "location": { "name": "Aceh Utara", "lat": 5.01, "lng": 97.23 },
       "aiThemes": ["Local Wisdom", "Disaster Preparedness"],
       "media": {
-        "featuredImage": "https://picsum.photos/seed/14/800/600",
+        "featuredImage": "https://cdn.dribbble.com/userupload/29829998/file/original-94b1514fe3d528f62a84cf250c5efc1f.png",
         "featuredImageHint": "old well"
       },
       "status": "published"
@@ -149,7 +149,7 @@
       "location": { "name": "Bireuen", "lat": 5.2, "lng": 96.7 },
       "aiThemes": ["Local Wisdom"],
       "media": {
-        "featuredImage": "https://picsum.photos/seed/15/800/600",
+        "featuredImage": "https://cdn.dribbble.com/userupload/13448080/file/original-e275af77b98be7d7d015e61704339958.png",
         "featuredImageHint": "starry night"
       },
       "status": "published"
@@ -160,7 +160,7 @@
       "location": { "name": "Banda Aceh", "lat": 5.55, "lng": 95.32 },
       "aiThemes": ["Local Wisdom", "Peacebuilding"],
       "media": {
-        "featuredImage": "https://picsum.photos/seed/16/800/600",
+        "featuredImage": "https://cdn.dribbble.com/userupload/32247153/file/original-1fe677ceff3cabb6bf2037dc808ace4d.jpg",
         "featuredImageHint": "traditional market"
       },
       "status": "published"
@@ -171,7 +171,7 @@
       "location": { "name": "Lhokseumawe", "lat": 5.18, "lng": 97.15 },
       "aiThemes": ["Disaster Preparedness", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://picsum.photos/seed/17/800/600",
+        "featuredImage": "https://cdn.dribbble.com/userupload/16865092/file/original-286765ae0de4074597bfb6584a571c60.jpeg",
         "featuredImageHint": "child drawing"
       },
       "status": "published"
