pada header ubah nama explore jadi stories

--- a/src/lib/i18n/en.json
+++ b/src/lib/i18n/en.json
@@ -2,7 +2,7 @@
 {
   "header": {
     "home": "Home",
-    "explore": "Explore",
+    "stories": "Stories",
     "interactive": "Interactive",
     "eduboard": "EduBoard",
     "shareStory": "Share Story"
