--- a/src/lib/i18n/id.json
+++ b/src/lib/i18n/id.json
@@ -2,7 +2,7 @@
 {
   "header": {
     "home": "Beranda",
-    "explore": "Jelajahi",
+    "stories": "Cerita",
     "interactive": "Interaktif",
     "eduboard": "EduBoard",
     "shareStory": "Bagikan Cerita"
