untuk setiap card pada tampilan di stories ubah gambarnya dengan salah s

--- a/src/lib/i18n/stories.json
+++ b/src/lib/i18n/stories.json
@@ -6,8 +6,8 @@
       "location": { "name": "Simeulue", "lat": 2.61, "lng": 96.08 },
       "aiThemes": ["Local Wisdom", "Disaster Preparedness"],
       "media": {
-        "featuredImage": "https://cdn.dribbble.com/userupload/26382361/file/original-a94049296846fa5218859ac34ea57b23.png",
-        "featuredImageHint": "ocean waves"
+        "featuredImage": "https://i.ibb.co/GQSD4TWr/Gemini-Generated-Image-muisyomuisyomuis.png",
+        "featuredImageHint": "tsunami wave hitting coast"
       },
       "status": "published"
     },
@@ -17,8 +17,8 @@
       "location": { "name": "Aceh Jaya", "lat": 4.78, "lng": 95.73 },
       "aiThemes": ["Disaster Preparedness", "Peacebuilding"],
       "media": {
-        "featuredImage": "https://cdn.dribbble.com/userupload/27796411/file/original-992aa78e02707e86da76830a224a2f2d.png",
-        "featuredImageHint": "mangrove forest"
+        "featuredImage": "https://i.ibb.co/cKZnnyh5/Gemini-Generated-Image-t9i448t9i448t9i4.png",
+        "featuredImageHint": "dense mangrove forest"
       },
       "status": "published"
     },
@@ -28,8 +28,8 @@
       "location": { "name": "Bireuen", "lat": 5.2, "lng": 96.7 },
       "aiThemes": ["Peacebuilding", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://cdn.dribbble.com/userupload/32247153/file/original-1fe677ceff3cabb6bf2037dc808ace4d.jpg",
-        "featuredImageHint": "disaster"
+        "featuredImage": "https://i.ibb.co/T3f302F/Gemini-Generated-Image-rmhvlgrmhvlgrmhv.png",
+        "featuredImageHint": "people eating together happily"
       },
       "status": "published"
     },
@@ -39,8 +39,8 @@
       "location": { "name": "Gayo Lues", "lat": 3.98, "lng": 97.35 },
       "aiThemes": ["Disaster Preparedness", "Local Wisdom", "Peacebuilding"],
       "media": {
-        "featuredImage": "https://cdn.dribbble.com/userupload/16865134/file/original-ac6d283eaa706824abed43da7e901dd2.jpeg",
-        "featuredImageHint": "community"
+        "featuredImage": "https://i.ibb.co/s9nftm6k/Gemini-Generated-Image-2yb53r2yb53r2yb5.png",
+        "featuredImageHint": "happy farming community"
       },
       "status": "published"
     },
@@ -50,8 +50,8 @@
       "location": { "name": "Pidie", "lat": 5.37, "lng": 95.96 },
       "aiThemes": ["Disaster Preparedness", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://cdn.dribbble.com/userupload/29829998/file/original-94b1514fe3d528f62a84cf250c5efc1f.png",
-        "featuredImageHint": "raging river"
+        "featuredImage": "https://i.ibb.co/MxDVKgQ8/Gemini-Generated-Image-ptyvfqptyvfqptyv.png",
+        "featuredImageHint": "raging flash flood logs"
       },
       "status": "published"
     },
@@ -61,8 +61,8 @@
       "location": { "name": "Aceh Tengah", "lat": 4.62, "lng": 96.85 },
       "aiThemes": ["Disaster Preparedness", "Peacebuilding"],
       "media": {
-        "featuredImage": "https://cdn.dribbble.com/userupload/16865134/file/original-ac6d283eaa706824abed43da7e901dd2.jpeg",
-        "featuredImageHint": "forest fire"
+        "featuredImage": "https://i.ibb.co/wrwhkWjG/Gemini-Generated-Image-1tus9y1tus9y1tus.png",
+        "featuredImageHint": "people fighting forest fire"
       },
       "status": "published"
     },
@@ -72,8 +72,8 @@
       "location": { "name": "Bener Meriah", "lat": 4.72, "lng": 96.86 },
       "aiThemes": ["Peacebuilding", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://cdn.dribbble.com/userupload/16865134/file/original-ac6d283eaa706824abed43da7e901dd2.jpeg",
-        "featuredImageHint": "coffee beans"
+        "featuredImage": "https://i.ibb.co/65QLYw8/Gemini-Generated-Image-xp78xcxp78xcxp78.png",
+        "featuredImageHint": "cup of steaming gayo coffee"
       },
       "status": "published"
     },
@@ -83,8 +83,8 @@
       "location": { "name": "Pidie", "lat": 5.37, "lng": 95.96 },
       "aiThemes": ["Peacebuilding", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://cdn.dribbble.com/userupload/32247153/file/original-1fe677ceff3cabb6bf2037dc808ace4d.jpg",
-        "featuredImageHint": "traditional dance"
+        "featuredImage": "https://i.ibb.co/MDmNGYvr/Gemini-Generated-Image-sqvrxesqvrxesqvr.png",
+        "featuredImageHint": "seudati dance performance"
       },
       "status": "published"
     },
@@ -94,8 +94,8 @@
       "location": { "name": "Aceh Besar", "lat": 5.37, "lng": 95.52 },
       "aiThemes": ["Peacebuilding", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://cdn.dribbble.com/userupload/32707329/file/original-01992760209b192c3d12d849dc7ee6d4.jpeg",
-        "featuredImageHint": "woven crafts"
+        "featuredImage": "https://i.ibb.co/RkGvwjR8/Gemini-Generated-Image-pucmhfpucmhfpucm.png",
+        "featuredImageHint": "woman proudly holding woven bag"
       },
       "status": "published"
     },
@@ -105,8 +105,8 @@
       "location": { "name": "Banda Aceh", "lat": 5.55, "lng": 95.32 },
       "aiThemes": ["Local Wisdom", "Disaster Preparedness"],
       "media": {
-        "featuredImage": "https://cdn.dribbble.com/userupload/29829998/file/original-94b1514fe3d528f62a84cf250c5efc1f.png",
-        "featuredImageHint": "traditional house"
+        "featuredImage": "https://i.ibb.co/JfnLPtj/Gemini-Generated-Image-wo8rv7wo8rv7wo8r.png",
+        "featuredImageHint": "modern house with traditional aceh design"
       },
       "status": "published"
     },
@@ -116,8 +116,8 @@
       "location": { "name": "Banda Aceh", "lat": 5.55, "lng": 95.32 },
       "aiThemes": ["Peacebuilding"],
       "media": {
-        "featuredImage": "https://cdn.dribbble.com/userupload/16865092/file/original-286765ae0de4074597bfb6584a571c60.jpeg",
-        "featuredImageHint": "street art mural"
+        "featuredImage": "https://i.ibb.co/pjr6h7s0/Gemini-Generated-Image-ikoughikoughikou.png",
+        "featuredImageHint": "children interacting with mural"
       },
       "status": "published"
     },
@@ -127,8 +127,8 @@
       "location": { "name": "Banda Aceh", "lat": 5.55, "lng": 95.32 },
       "aiThemes": ["Local Wisdom"],
       "media": {
-        "featuredImage": "https://cdn.dribbble.com/userupload/26382361/file/original-a94049296846fa5218859ac34ea57b23.png",
-        "featuredImageHint": "fishing boats"
+        "featuredImage": "https://i.ibb.co/zhj5vRfQ/Gemini-Generated-Image-yz9meiyz9meiyz9m.png",
+        "featuredImageHint": "fisherman at night starry sky"
       },
       "status": "published"
     },
@@ -138,8 +138,8 @@
       "location": { "name": "Aceh Utara", "lat": 5.01, "lng": 97.23 },
       "aiThemes": ["Local Wisdom", "Disaster Preparedness"],
       "media": {
-        "featuredImage": "https://cdn.dribbble.com/userupload/29829998/file/original-94b1514fe3d528f62a84cf250c5efc1f.png",
-        "featuredImageHint": "old well"
+        "featuredImage": "https://i.ibb.co/N2DZQFsc/Gemini-Generated-Image-4o62wj4o62wj4o62.png",
+        "featuredImageHint": "clear water in old well"
       },
       "status": "published"
     },
