sekakrng ada beebrapa gamabr pada tampilan card di storynya masih belum

--- a/src/lib/i18n/stories.json
+++ b/src/lib/i18n/stories.json
@@ -149,8 +149,8 @@
       "location": { "name": "Bireuen", "lat": 5.2, "lng": 96.7 },
       "aiThemes": ["Local Wisdom"],
       "media": {
-        "featuredImage": "https://cdn.dribbble.com/userupload/13448080/file/original-e275af77b98be7d7d015e61704339958.png",
-        "featuredImageHint": "starry night"
+        "featuredImage": "https://i.ibb.co/xS91Wwgz/Gemini-Generated-Image-j2fi8xj2fi8xj2fi.png",
+        "featuredImageHint": "mosque against starry sky"
       },
       "status": "published"
     },
@@ -160,8 +160,8 @@
       "location": { "name": "Banda Aceh", "lat": 5.55, "lng": 95.32 },
       "aiThemes": ["Local Wisdom", "Peacebuilding"],
       "media": {
-        "featuredImage": "https://cdn.dribbble.com/userupload/32247153/file/original-1fe677ceff3cabb6bf2037dc808ace4d.jpg",
-        "featuredImageHint": "traditional market"
+        "featuredImage": "https://i.ibb.co/Lz42QxHm/Gemini-Generated-Image-k208uik208uik208.png",
+        "featuredImageHint": "bustling traditional market"
       },
       "status": "published"
     },
@@ -171,8 +171,8 @@
       "location": { "name": "Lhokseumawe", "lat": 5.18, "lng": 97.15 },
       "aiThemes": ["Disaster Preparedness", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://cdn.dribbble.com/userupload/16865092/file/original-286765ae0de4074597bfb6584a571c60.jpeg",
-        "featuredImageHint": "child drawing"
+        "featuredImage": "https://i.ibb.co/spP9SMTt/Gemini-Generated-Image-qxxmruqxxmruqxxm.png",
+        "featuredImageHint": "cartoon earthquake cat under table"
       },
       "status": "published"
     }
