<a href="https://ibb.co.com/yCxMPs2"><img src="https://i.ibb.co.com/TGNn

--- a/src/lib/i18n/stories.json
+++ b/src/lib/i18n/stories.json
@@ -172,8 +172,8 @@
       "location": { "name": "Lhokseumawe", "lat": 5.18, "lng": 97.15 },
       "aiThemes": ["Disaster Preparedness", "Local Wisdom"],
       "media": {
-        "featuredImage": "",
-        "featuredImageHint": ""
+        "featuredImage": "https://i.ibb.co/TGNn2hy/Gemini-Generated-Image-spdth3spdth3spdt.png",
+        "featuredImageHint": "happy cats playing on hill"
       },
       "status": "published"
     }
