--- a/src/lib/i18n/stories.json
+++ b/src/lib/i18n/stories.json
@@ -7,7 +7,7 @@
       "location": { "name": "Simeulue", "lat": 2.61, "lng": 96.08 },
       "aiThemes": ["Local Wisdom", "Disaster Preparedness"],
       "media": {
-        "featuredImage": "https://i.ibb.co/GQSD4TWr/Gemini-Generated-Image-muisyomuisyomuis.png",
+        "featuredImage": "https://i.ibb.co.com/GQSD4TWr/Gemini-Generated-Image-muisyomuisyomuis.png",
         "featuredImageHint": "tsunami wave hitting coast"
       },
       "status": "published"
@@ -18,7 +18,7 @@
       "location": { "name": "Aceh Jaya", "lat": 4.78, "lng": 95.73 },
       "aiThemes": ["Disaster Preparedness", "Peacebuilding"],
       "media": {
-        "featuredImage": "https://i.ibb.co/cKZnnyh5/Gemini-Generated-Image-t9i448t9i448t9i4.png",
+        "featuredImage": "https://i.ibb.co.com/cKZnnyh5/Gemini-Generated-Image-t9i448t9i448t9i4.png",
         "featuredImageHint": "dense mangrove forest"
       },
       "status": "published"
@@ -29,7 +29,7 @@
       "location": { "name": "Bireuen", "lat": 5.2, "lng": 96.7 },
       "aiThemes": ["Peacebuilding", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://i.ibb.co/T3f302F/Gemini-Generated-Image-rmhvlgrmhvlgrmhv.png",
+        "featuredImage": "https://i.ibb.co.com/T3f302F/Gemini-Generated-Image-rmhvlgrmhvlgrmhv.png",
         "featuredImageHint": "people eating together happily"
       },
       "status": "published"
@@ -40,7 +40,7 @@
       "location": { "name": "Gayo Lues", "lat": 3.98, "lng": 97.35 },
       "aiThemes": ["Disaster Preparedness", "Local Wisdom", "Peacebuilding"],
       "media": {
-        "featuredImage": "https://i.ibb.co/s9nftm6k/Gemini-Generated-Image-2yb53r2yb53r2yb5.png",
+        "featuredImage": "https://i.ibb.co.com/s9nftm6k/Gemini-Generated-Image-2yb53r2yb53r2yb5.png",
         "featuredImageHint": "happy farming community"
       },
       "status": "published"
@@ -51,7 +51,7 @@
       "location": { "name": "Pidie", "lat": 5.37, "lng": 95.96 },
       "aiThemes": ["Disaster Preparedness", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://i.ibb.co/MxDVKgQ8/Gemini-Generated-Image-ptyvfqptyvfqptyv.png",
+        "featuredImage": "https://i.ibb.co.com/MxDVKgQ8/Gemini-Generated-Image-ptyvfqptyvfqptyv.png",
         "featuredImageHint": "raging flash flood logs"
       },
       "status": "published"
@@ -62,7 +62,7 @@
       "location": { "name": "Aceh Tengah", "lat": 4.62, "lng": 96.85 },
       "aiThemes": ["Disaster Preparedness", "Peacebuilding"],
       "media": {
-        "featuredImage": "https://i.ibb.co/wrwhkWjG/Gemini-Generated-Image-1tus9y1tus9y1tus.png",
+        "featuredImage": "https://i.ibb.co.com/wrwhkWjG/Gemini-Generated-Image-1tus9y1tus9y1tus.png",
         "featuredImageHint": "people fighting forest fire"
       },
       "status": "published"
@@ -73,7 +73,7 @@
       "location": { "name": "Bener Meriah", "lat": 4.72, "lng": 96.86 },
       "aiThemes": ["Peacebuilding", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://i.ibb.co/65QLYw8/Gemini-Generated-Image-xp78xcxp78xcxp78.png",
+        "featuredImage": "https://i.ibb.co.com/65QLYw8/Gemini-Generated-Image-xp78xcxp78xcxp78.png",
         "featuredImageHint": "cup of steaming gayo coffee"
       },
       "status": "published"
@@ -84,7 +84,7 @@
       "location": { "name": "Pidie", "lat": 5.37, "lng": 95.96 },
       "aiThemes": ["Peacebuilding", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://i.ibb.co/MDmNGYvr/Gemini-Generated-Image-sqvrxesqvrxesqvr.png",
+        "featuredImage": "https://i.ibb.co.com/MDmNGYvr/Gemini-Generated-Image-sqvrxesqvrxesqvr.png",
         "featuredImageHint": "seudati dance performance"
       },
       "status": "published"
@@ -95,7 +95,7 @@
       "location": { "name": "Aceh Besar", "lat": 5.37, "lng": 95.52 },
       "aiThemes": ["Peacebuilding", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://i.ibb.co/RkGvwjR8/Gemini-Generated-Image-pucmhfpucmhfpucm.png",
+        "featuredImage": "https://i.ibb.co.com/RkGvwjR8/Gemini-Generated-Image-pucmhfpucmhfpucm.png",
         "featuredImageHint": "woman proudly holding woven bag"
       },
       "status": "published"
@@ -106,7 +106,7 @@
       "location": { "name": "Banda Aceh", "lat": 5.55, "lng": 95.32 },
       "aiThemes": ["Local Wisdom", "Disaster Preparedness"],
       "media": {
-        "featuredImage": "https://i.ibb.co/JfnLPtj/Gemini-Generated-Image-wo8rv7wo8rv7wo8r.png",
+        "featuredImage": "https://i.ibb.co.com/JfnLPtj/Gemini-Generated-Image-wo8rv7wo8rv7wo8r.png",
         "featuredImageHint": "modern house with traditional aceh design"
       },
       "status": "published"
@@ -117,7 +117,7 @@
       "location": { "name": "Banda Aceh", "lat": 5.55, "lng": 95.32 },
       "aiThemes": ["Peacebuilding"],
       "media": {
-        "featuredImage": "https://i.ibb.co/pjr6h7s0/Gemini-Generated-Image-ikoughikoughikou.png",
+        "featuredImage": "https://i.ibb.co.com/pjr6h7s0/Gemini-Generated-Image-ikoughikoughikou.png",
         "featuredImageHint": "children interacting with mural"
       },
       "status": "published"
@@ -128,7 +128,7 @@
       "location": { "name": "Banda Aceh", "lat": 5.55, "lng": 95.32 },
       "aiThemes": ["Local Wisdom"],
       "media": {
-        "featuredImage": "https://i.ibb.co/zhj5vRfQ/Gemini-Generated-Image-yz9meiyz9meiyz9m.png",
+        "featuredImage": "https://i.ibb.co.com/zhj5vRfQ/Gemini-Generated-Image-yz9meiyz9meiyz9m.png",
         "featuredImageHint": "fisherman at night starry sky"
       },
       "status": "published"
@@ -139,7 +139,7 @@
       "location": { "name": "Aceh Utara", "lat": 5.01, "lng": 97.23 },
       "aiThemes": ["Local Wisdom", "Disaster Preparedness"],
       "media": {
-        "featuredImage": "https://i.ibb.co/N2DZQFsc/Gemini-Generated-Image-4o62wj4o62wj4o62.png",
+        "featuredImage": "https://i.ibb.co.com/N2DZQFsc/Gemini-Generated-Image-4o62wj4o62wj4o62.png",
         "featuredImageHint": "clear water in old well"
       },
       "status": "published"
@@ -150,7 +150,7 @@
       "location": { "name": "Bireuen", "lat": 5.2, "lng": 96.7 },
       "aiThemes": ["Local Wisdom"],
       "media": {
-        "featuredImage": "https://i.ibb.co/xS91Wwgz/Gemini-Generated-Image-j2fi8xj2fi8xj2fi.png",
+        "featuredImage": "https://i.ibb.co.com/xS91Wwgz/Gemini-Generated-Image-j2fi8xj2fi8xj2fi.png",
         "featuredImageHint": "mosque against starry sky"
       },
       "status": "published"
@@ -161,8 +161,8 @@
       "location": { "name": "Banda Aceh", "lat": 5.55, "lng": 95.32 },
       "aiThemes": ["Local Wisdom", "Peacebuilding"],
       "media": {
-        "featuredImage": "",
-        "featuredImageHint": ""
+        "featuredImage": "https://i.ibb.co/Lz42QxHm/Gemini-Generated-Image-k208uik208uik208.png",
+        "featuredImageHint": "bustling traditional market"
       },
       "status": "published"
     },
@@ -172,7 +172,7 @@
       "location": { "name": "Lhokseumawe", "lat": 5.18, "lng": 97.15 },
       "aiThemes": ["Disaster Preparedness", "Local Wisdom"],
       "media": {
-        "featuredImage": "https://i.ibb.co/TGNn2hy/Gemini-Generated-Image-spdth3spdth3spdt.png",
+        "featuredImage": "https://i.ibb.co.com/TGNn2hy/Gemini-Generated-Image-spdth3spdth3spdt.png",
         "featuredImageHint": "happy cats playing on hill"
       },
       "status": "published"
