<a href="https://ibb.co.com/Zz9J8nL8"><img src="https://i.ibb.co.com/d4Z

--- a/src/lib/i18n/stories.json
+++ b/src/lib/i18n/stories.json
@@ -7,8 +7,8 @@
       "location": { "name": "Simeulue", "lat": 2.61, "lng": 96.08 },
       "aiThemes": ["Local Wisdom", "Disaster Preparedness"],
       "media": {
-        "featuredImage": "https://i.ibb.co.com/GQSD4TWr/Gemini-Generated-Image-muisyomuisyomuis.png",
-        "featuredImageHint": "tsunami wave hitting coast"
+        "featuredImage": "https://i.ibb.co.com/d4Zc2dW2/Gemini-Generated-Image-nep5q4nep5q4nep5.png",
+        "featuredImageHint": "people running uphill"
       },
       "status": "published"
     },
@@ -161,7 +161,7 @@
       "location": { "name": "Banda Aceh", "lat": 5.55, "lng": 95.32 },
       "aiThemes": ["Local Wisdom", "Peacebuilding"],
       "media": {
-        "featuredImage": "https://i.ibb.co/Lz42QxHm/Gemini-Generated-Image-k208uik208uik208.png",
+        "featuredImage": "https://i.ibb.co.com/Lz42QxHm/Gemini-Generated-Image-k208uik208uik208.png",
         "featuredImageHint": "bustling traditional market"
       },
       "status": "published"
